--- a/Jenkinsfile.template
+++ b/Jenkinsfile.template
@@ -1,32 +1,32 @@
 pipeline {
     agent { 
         node {
-            label 'python-agent'
+            label 'jenkins-agent-goes-here'
             }
       }
     stages {
         stage('Build') {
             steps {
-                echo 'Building..'
+                echo "Building.."
                 sh '''
-                cd myapp
-                pip install -r requirements.txt
+                echo "doing build stuff.."
                 '''
             }
         }
         stage('Test') {
             steps {
-                echo 'Testing..'
+                echo "Testing.."
                 sh '''
-                cd myapp
-                python3 hello.py
-                python3 hello.py --name=Brad
+                echo "doing test stuff..
                 '''
             }
         }
         stage('Deliver') {
             steps {
                 echo 'Deliver....'
+                sh '''
+                echo "doing delivery stuff.."
+                '''
             }
         }
     }
