--- a/dockerhub-example/Jenkinsfile
+++ b/dockerhub-example/Jenkinsfile
@@ -6,6 +6,8 @@ pipeline {
   }
   environment {
     DOCKERHUB_CREDENTIALS = credentials('gide100-dockerhub')
+    DOCKER_TLS_VERIFY = ''
+    DOCKER_CERT_PATH = ''
   }
   stages {
     stage('Build') {
