--- a/dockerhub-example/Jenkinsfile
+++ b/dockerhub-example/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
   }
   environment {
     DOCKERHUB_CREDENTIALS = credentials('gide100-dockerhub')
+    DOCKER_HOST=unix:///var/run/docker.sock
     DOCKER_TLS_VERIFY = ''
     DOCKER_CERT_PATH = ''
   }
