--- a/dockerhub-example/Jenkinsfile
+++ b/dockerhub-example/Jenkinsfile
@@ -27,6 +27,8 @@ pipeline {
     }
     stage('Login') {
       steps {
+        unset DOCKER_TLS_VERIFY
+        unset DOCKER_CERT_PATH
         sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
       }
     }
